--- a/demo/test.html
+++ b/demo/test.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script type="module" src="../deframe.js"></script>
+    <script type="module">
+      import {deframe} from '../deframe.js';
+      deframe('test-2');
+    </script>
 </head>
 <body>
     I am here
