--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <iframe src="test.html" style="display:none"></iframe>
+    <iframe src="wc/test.html" style="display:none"></iframe>
     <test-2></test-2>
 </body>
 </html>
