--- a/demo/wc/test.html
+++ b/demo/wc/test.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/templ-mount@0.0.46/dist/templ-mount.iife.js"></script>
     <script type="module">
       import {deframe} from '../../deframe.js';
-      deframe('test-2');
+      deframe('my-component');
     </script>
     <template data-activate>
         <script type="module" src="https://unpkg.com/p-d.p-u@0.0.76/dist/p-d.iife.js"></script>
