--- a/demo/wc/test.html
+++ b/demo/wc/test.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel=":preload" href="p-d.iife.js" as="script">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
@@ -10,9 +11,8 @@
       import {deframe} from '../../deframe.js';
       deframe('test-2');
     </script>
-    <template data-activate>
-        <script type="module" src="https://unpkg.com/p-d.p-u@0.0.76/dist/p-d.iife.js"></script>
-    </template>
+    
+    
     <templ-mount target-top></templ-mount>
 </head>
 <body>
