--- a/demo/wc/test.html
+++ b/demo/wc/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel=":preload" href="p-d.iife.js" as="script">
+    <link rel="preloadmodule" href="p-d.iife.js" as="script">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
