--- a/demo/dev.html
+++ b/demo/dev.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <iframe src="wc/test.html" style="display:none"></iframe>
+    
 </head>
 <body>
-        
+    <iframe src="wc/test.html"></iframe>
     <test-2></test-2>
 </body>
 </html>
